<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ifrs.myapplication.MainActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/controles"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffc916"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="40dp"
                        android:text="@string/titulo_controles"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/texto_chave_freio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="@string/freio"
                        android:layout_below="@+id/titulo"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />

                    <Switch
                        android:id="@+id/chave_catavento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/texto_chave_freio"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="35dp"
                        />

                    <TextView
                        android:text="@string/liberar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chave_catavento"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="16dp"
                        android:id="@+id/texto_liberar" />

                    <TextView
                        android:text="@string/frear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chave_catavento"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="16dp"
                        android:id="@+id/texto_frear" />

                    <TextView
                        android:id="@+id/texto_chave_inversor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="@string/inversor"
                        android:layout_below="@+id/texto_frear"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />

                    <Switch
                        android:id="@+id/chave_inversor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/texto_chave_inversor"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="35dp"
                        />

                    <TextView
                        android:text="@string/rede"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chave_inversor"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="16dp"
                        android:id="@+id/texto_rede" />

                    <TextView
                        android:text="@string/pos_inversor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/chave_inversor"
                        android:layout_marginStart="130dp"
                        android:layout_marginTop="16dp"
                        android:id="@+id/texto_inversor" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/frame01"
                        android:layout_marginEnd="29dp"
                        android:id="@+id/animacao"
                        android:layout_alignTop="@+id/texto_chave_freio"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#da8200"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/medicoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="40dp"
                        android:text="Medições"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/texto_tensao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="Tensão das Baterias"
                        android:layout_below="@+id/medicoes"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />

                    <TextView
                        android:id="@+id/campo_tensao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="0V"
                        android:layout_below="@+id/texto_tensao"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />

                    <TextView
                        android:id="@+id/texto_giro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="Tensão das Baterias"
                        android:layout_below="@+id/campo_tensao"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />

                    <TextView
                        android:id="@+id/campo_giro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="0rpm"
                        android:layout_below="@+id/texto_giro"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#5b89ff"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/configuracoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="40dp"
                        android:text="Configurações"
                        android:layout_centerHorizontal="true" />

                    <TextView
                        android:id="@+id/texto_ip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="IP do Catavento"
                        android:layout_below="@+id/configuracoes"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="35dp" />

                    <EditText
                        android:id="@+id/byte3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="000"
                        android:layout_alignBaseline="@+id/byte2"
                        android:layout_alignBottom="@+id/byte2"
                        android:layout_centerHorizontal="true" />

                    <EditText
                        android:id="@+id/byte4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="000"
                        android:layout_marginStart="34dp"
                        android:layout_alignBaseline="@+id/byte3"
                        android:layout_alignBottom="@+id/byte3"
                        android:layout_toEndOf="@+id/byte3" />

                    <EditText
                        android:id="@+id/byte1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="000"
                        android:layout_marginTop="36dp"
                        android:layout_below="@+id/texto_ip"
                        android:layout_alignStart="@+id/texto_ip" />

                    <EditText
                        android:id="@+id/byte2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15dp"
                        android:text="000"
                        android:layout_alignBaseline="@+id/byte1"
                        android:layout_alignBottom="@+id/byte1"
                        android:layout_alignEnd="@+id/texto_ip"
                        android:layout_marginEnd="12dp" />




                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>